--- a/index.html
+++ b/index.html
@@ -3,29 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Google Form</title>
+    <title>Book Oxford City & University Walking Tour: Rory in Oxford</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
-        .form-container {
-            width: 100%;
-            max-width: 640px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-        }
-        iframe {
-            width: 100%;
-            border: none;
-        }
     </style>
 </head>
 <body>
