--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ a<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Google Form</title>
+    <title>Book Oxford University & City Walking Tour: Rory in Oxford</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,7 +34,7 @@ a<!DOCTYPE html>
 </head>
 <body>
     <div class="header">
-        <img src="book.roryinoxford.com/radcam_header" alt="Header Image" width="640" />
+        <img src="book.roryinoxford.github.io/radcam_header" alt="Header Image" width="640" />
     </div>
     <div class="form-container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi5WOgAdkf45Kstg7IMqo0cBuMliD6UJQ9MTiugxVXzf9ygw/viewform?embedded=true" width="640" height="748" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
