--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -34,7 +34,7 @@ a<!DOCTYPE html>
 </head>
 <body>
     <div class="header">
-        <img src="roryinoxford.github.io/radcam_header.png" alt="Header Image" width="640" />
+        <img src="roryinoxford.github.io/radcam_header.png" alt="Header Image" width="740" />
     </div>
     <div class="form-container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi5WOgAdkf45Kstg7IMqo0cBuMliD6UJQ9MTiugxVXzf9ygw/viewform?embedded=true" width="640" height="748" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
