--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16609436442"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-16609436442');
-</script>
+    <meta http-equiv="refresh" content="0; url=https://book.roryinoxford.com/tours">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book Oxford University & City Walking Tour: Rory in Oxford</title>
+    <title>Book Rory in Oxford</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -43,11 +35,6 @@
     </style>
 </head>
 <body>
-    <div class="header">
-        <img src="roryinoxford.github.io/radcam_header_round.png" alt="Header Image" width="700" />
-    </div>
-    <div class="form-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi5WOgAdkf45Kstg7IMqo0cBuMliD6UJQ9MTiugxVXzf9ygw/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
+<p>If you are not redirected automatically, follow this <a href="https://book.roryinoxford.com/tours">link</a>.</p>
 </body>
 </html>
