--- a/private.html
+++ b/private.html
@@ -13,6 +13,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>Book a Private Tour: Rory in Oxford</title>
     <style>
         body {
