--- a/private.html
+++ b/private.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="roryinoxford.github.io/ds_header_round.png" alt="Header Image" width="700" />
+        <img src="roryinoxford.github.io/ds_header_round.jpg" alt="Header Image" width="700" />
     </div>
     <div class="form-container">
        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScRxTOu7JqM7FeIsk11Xk6_oGVBPfukdbX5rFK2ZgTx6-3vig/viewform?embedded=true" width="640" height="1821" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
