--- a/tours.html
+++ b/tours.html
@@ -16,18 +16,25 @@
    <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>Book Oxford University & City Walking Tour: Rory in Oxford</title>
     <style>
-        body {
+        html, body {
             font-family: Arial, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
             background-color: #d4ceb5;
             margin: 0;
+            padding: 0;
+            overflow-x: hidden; /* Prevent horizontal overflow */
         }
         .header {
             width: 100%;
             text-align: center;
             margin: 20px 0;
+        }
+        .header img {
+            width: 100%;
+            max-width: 700px;
+            height: auto; /* Ensure image scales proportionally */
         }
         .form-container {
             width: 100%;
@@ -39,16 +46,17 @@
         }
         iframe {
             width: 100%;
+            height: 800px; /* Keep the iframe height as is */
             border: none;
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <img src="roryinoxford.github.io/radcam_header_round.png" alt="Header Image" width="700" />
+        <img src="roryinoxford.github.io/radcam_header_round.png" alt="Header Image" />
     </div>
     <div class="form-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi5WOgAdkf45Kstg7IMqo0cBuMliD6UJQ9MTiugxVXzf9ygw/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi5WOgAdkf45Kstg7IMqo0cBuMliD6UJQ9MTiugxVXzf9ygw/viewform?embedded=true"></iframe>
     </div>
 </body>
 </html>
