--- a/tours.html
+++ b/tours.html
@@ -46,7 +46,7 @@
         }
         iframe {
             width: 100%;
-            height: 800px; /* Keep the iframe height as is */
+            height: 1500px; 
             border: none;
         }
     </style>
