--- a/tours.html
+++ b/tours.html
@@ -40,7 +40,7 @@
             width: 100%;
             max-width: 640px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            background-color: #fff;
+            background-color: #d4ceb5;
             padding: 20px;
             border-radius: 8px;
         }
