--- a/tours.html
+++ b/tours.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="icon" href="favicon.png" type="image/x-icon">
-    <title>Book Oxford University & City Walking Tour: Rory in Oxford</title>
+    <title>Book Tour: Rory in Oxford</title>
     <style>
         html, body {
             font-family: Arial, sans-serif;
