--- a/tours.html
+++ b/tours.html
@@ -11,6 +11,20 @@
   gtag('config', 'AW-16609436442');
 </script>
 
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('consent', 'default', {
+    'ad_user_data': 'denied',
+    'ad_personalization': 'denied',
+    'ad_storage': 'denied',
+    'analytics_storage': 'denied',
+    'wait_for_update': 500,
+  });
+  gtag('js', new Date());
+  gtag('config', 'AW-16609436442');
+  </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="icon" href="favicon.png" type="image/x-icon">
@@ -58,5 +72,67 @@
     <div class="form-container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi5WOgAdkf45Kstg7IMqo0cBuMliD6UJQ9MTiugxVXzf9ygw/viewform?embedded=true"></iframe>
     </div>
+
+  <body>
+  <!-- Other HTML content -->
+
+  <!-- Cookie Consent Banner -->
+  <div id="cookieConsent" style="display: none; position: fixed; bottom: 0; width: 100%; background-color: #000; color: #fff; text-align: center; padding: 10px;">
+    This website uses cookies to ensure you get the best experience. <a href="/cookie-policy" style="color: #f1d600;">Learn more</a>
+    <button id="acceptCookies" style="background-color: #f1d600; border: none; padding: 5px 10px; margin-left: 10px;">Got it!</button>
+  </div>
+
+  <!-- Other HTML content -->
+</body>
+
+  <body>
+  <!-- Other HTML content -->
+
+  <!-- Cookie Consent Banner -->
+  <div id="cookieConsent" style="display: none; position: fixed; bottom: 0; width: 100%; background-color: #000; color: #fff; text-align: center; padding: 10px;">
+    This website uses cookies to ensure you get the best experience. <a href="/cookie-policy" style="color: #f1d600;">Learn more</a>
+    <button id="acceptCookies" style="background-color: #f1d600; border: none; padding: 5px 10px; margin-left: 10px;">Got it!</button>
+  </div>
+
+  <!-- JavaScript -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      // Check if consent is already given
+      if (!localStorage.getItem("cookieConsent")) {
+        document.getElementById("cookieConsent").style.display = "block";
+      }
+
+      // Handle consent button click
+      document.getElementById("acceptCookies").addEventListener("click", function() {
+        localStorage.setItem("cookieConsent", "true");
+        document.getElementById("cookieConsent").style.display = "none";
+      });
+    });
+  </script>
+
+     grantButton.addEventListener("click", function() {
+    localStorage.setItem("consentGranted", "true");
+    function gtag() { dataLayer.push(arguments); }
+
+    gtag('consent', 'update', {
+      ad_user_data: 'granted',
+      ad_personalization: 'granted',
+      ad_storage: 'granted',
+      analytics_storage: 'granted'
+    });
+  });
+
+  // Load gtag.js script.
+  var gtagScript = document.createElement('script');
+  gtagScript.async = true;
+  gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=AW-16609436442
+
+';
+
+  var firstScript = document.getElementsByTagName('script')[0];
+  firstScript.parentNode.insertBefore(gtagScript,firstScript);
+
+</body>
+
 </body>
 </html>
