--- a/tours.html
+++ b/tours.html
@@ -110,6 +110,7 @@
     });
   </script>
 
+    <script>
      grantButton.addEventListener("click", function() {
     localStorage.setItem("consentGranted", "true");
     function gtag() { dataLayer.push(arguments); }
@@ -131,7 +132,7 @@
 
   var firstScript = document.getElementsByTagName('script')[0];
   firstScript.parentNode.insertBefore(gtagScript,firstScript);
-
+</script>
 </body>
 
 </body>
