--- a/tours.html
+++ b/tours.html
@@ -75,12 +75,16 @@
     </div>
 
 
-
   <!-- Cookie Consent Banner -->
-  <div id="cookieConsent" style="display: none; position: fixed; bottom: 0; width: 100%; background-color: #000; color: #fff; text-align: center; padding: 10px;">
-    This website uses cookies to ensure you get the best experience. <a href="/cookie-policy" style="color: #f1d600;">Learn more</a>
-    <button id="acceptCookies" style="background-color: #f1d600; border: none; padding: 5px 10px; margin-left: 10px;">Got it!</button>
-  </div>
+<div id="cookieConsent" style="display: none; position: fixed; bottom: 0; width: 100%; background-color: #000; color: #fff; text-align: center; padding: 20px; z-index: 1000;">
+  <p style="font-size: 18px; margin: 0;">
+    This website uses cookies to ensure you get the best experience. <a href="/cookie-policy" style="color: #f1d600; font-weight: bold;">Learn more</a>
+  </p>
+  <button id="acceptCookies" style="background-color: #f1d600; color: #000; border: none; padding: 15px 30px; margin-top: 10px; font-size: 16px; font-weight: bold; cursor: pointer; border-radius: 5px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);">
+    Got it!
+  </button>
+</div>
+
 
   <!-- JavaScript -->
   <script>
