--- a/tours.html
+++ b/tours.html
@@ -2,131 +2,116 @@
 <html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16609436442"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-16609436442');
-</script>
-
-    <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('consent', 'default', {
-    'ad_user_data': 'denied',
-    'ad_personalization': 'denied',
-    'ad_storage': 'denied',
-    'analytics_storage': 'denied',
-    'wait_for_update': 500,
-  });
-  gtag('js', new Date());
-  gtag('config', 'AW-16609436442');
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16609436442"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'AW-16609436442');
   </script>
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="icon" href="favicon.png" type="image/x-icon">
-    <title>Book Tour: Rory in Oxford</title>
-    <style>
-        html, body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #d4ceb5;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden; /* Prevent horizontal overflow */
-        }
-        .header {
-            width: 100%;
-            text-align: center;
-            margin: 20px 0;
-        }
-        .header img {
-            width: 100%;
-            max-width: 700px;
-            height: auto; /* Ensure image scales proportionally */
-        }
-        .form-container {
-            width: 100%;
-            max-width: 640px;
-            box-shadow: 0 0 0px rgba(0, 0, 0, 0);
-            background-color: #d4ceb5;
-            padding: 0px;
-            border-radius: 0px;
-        }
-        iframe {
-            width: 100%;
-            height: 1200px; 
-            border: none;
-        }
-    </style>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('consent', 'default', {
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied',
+      'ad_storage': 'denied',
+      'analytics_storage': 'denied',
+      'wait_for_update': 500,
+    });
+    gtag('js', new Date());
+    gtag('config', 'AW-16609436442');
+  </script>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="favicon.png" type="image/x-icon">
+  <title>Book Tour: Rory in Oxford</title>
+  <style>
+    html, body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #d4ceb5;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden; /* Prevent horizontal overflow */
+    }
+    .header {
+      width: 100%;
+      text-align: center;
+      margin: 20px 0;
+    }
+    .header img {
+      width: 100%;
+      max-width: 700px;
+      height: auto; /* Ensure image scales proportionally */
+    }
+    .form-container {
+      width: 100%;
+      max-width: 640px;
+      box-shadow: 0 0 0px rgba(0, 0, 0, 0);
+      background-color: #d4ceb5;
+      padding: 0px;
+      border-radius: 0px;
+    }
+    iframe {
+      width: 100%;
+      height: 1200px; 
+      border: none;
+    }
+  </style>
 </head>
   
 <body>
-    <div class="header">
-        <img src="roryinoxford.github.io/radcam_header_round.png" alt="Header Image" />
-    </div>
+  <div class="header">
+    <img src="roryinoxford.github.io/radcam_header_round.png" alt="Header Image" />
+  </div>
 
-    <!-- Cookie Consent Banner -->
-<div id="cookieConsent" style="display: none; position: fixed; bottom: 0; width: 100%; background-color: #000; color: #fff; text-align: center; padding: 20px; z-index: 1000;">
-  <p style="font-size: 18px; margin: 0;">
-    This website uses cookies to ensure you get the best experience. <a href="/cookie-policy" style="color: #f1d600; font-weight: bold;">Learn more</a>
-  </p>
-  <button id="acceptCookies" style="background-color: #f1d600; color: #000; border: none; padding: 15px 30px; margin-top: 10px; font-size: 16px; font-weight: bold; cursor: pointer; border-radius: 5px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);">
-    Got it!
-  </button>
-</div>
+  <!-- Cookie Consent Banner -->
+  <div id="cookieConsent" style="display: none; position: fixed; bottom: 0; width: 100%; background-color: #000; color: #fff; text-align: center; padding: 20px; z-index: 1000;">
+    <p style="font-size: 18px; margin: 0;">
+      This website uses cookies to ensure you get the best experience. <a href="/cookie-policy" style="color: #f1d600; font-weight: bold;">Learn more</a>
+    </p>
+    <button id="acceptCookies" style="background-color: #f1d600; color: #000; border: none; padding: 15px 30px; margin-top: 10px; font-size: 16px; font-weight: bold; cursor: pointer; border-radius: 5px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);">
+      Got it!
+    </button>
+  </div>
 
-    <div class="form-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi5WOgAdkf45Kstg7IMqo0cBuMliD6UJQ9MTiugxVXzf9ygw/viewform?embedded=true"></iframe>
-    </div>
-
-
+  <div class="form-container">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfi5WOgAdkf45Kstg7IMqo0cBuMliD6UJQ9MTiugxVXzf9ygw/viewform?embedded=true"></iframe>
+  </div>
 
   <!-- JavaScript -->
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       // Check if consent is already given
-      if (!localStorage.getItem("acceptCookies")) {
-        document.getElementById("acceptCookies").style.display = "block";
+      if (!localStorage.getItem("cookieConsent")) {
+        document.getElementById("cookieConsent").style.display = "block";
       }
 
       // Handle consent button click
       document.getElementById("acceptCookies").addEventListener("click", function() {
         localStorage.setItem("cookieConsent", "true");
-        document.getElementById("acceptCookies").style.display = "none";
+        document.getElementById("cookieConsent").style.display = "none";
+
+        // Update Google Tag Manager consent
+        gtag('consent', 'update', {
+          ad_user_data: 'granted',
+          ad_personalization: 'granted',
+          ad_storage: 'granted',
+          analytics_storage: 'granted'
+        });
       });
     });
+
+    // Load gtag.js script dynamically if needed
+    var gtagScript = document.createElement('script');
+    gtagScript.async = true;
+    gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=AW-16609436442';
+    document.getElementsByTagName('head')[0].appendChild(gtagScript);
   </script>
-
-    <script>
-     grantButton.addEventListener("click", function() {
-    localStorage.setItem("acceptCookies", "true");
-    function gtag() { dataLayer.push(arguments); }
-
-    gtag('consent', 'update', {
-      ad_user_data: 'granted',
-      ad_personalization: 'granted',
-      ad_storage: 'granted',
-      analytics_storage: 'granted'
-    });
-  });
-
-  // Load gtag.js script.
-  var gtagScript = document.createElement('script');
-  gtagScript.async = true;
-  gtagScript.src = 'https://www.googletagmanager.com/gtag/js?id=AW-16609436442
-
-';
-
-  var firstScript = document.getElementsByTagName('script')[0];
-  firstScript.parentNode.insertBefore(gtagScript,firstScript);
-</script>
-</body>
-
 </body>
 </html>
