--- a/tours.html
+++ b/tours.html
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Load Google Tag Manager -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16609436442"></script>
+  
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-    
-     <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('consent', 'default', {
-    'ad_user_data': 'denied',
-    'ad_personalization': 'denied',
-    'ad_storage': 'denied',
-    'analytics_storage': 'denied',
-    'wait_for_update': 500,
-  });
-  gtag('js', new Date());
-  gtag('config', 'AW-16609436442');
+
+    // Function to set Google Tag Manager consent state
+    function setGTMConsent(granted) {
+      gtag('consent', 'update', {
+        ad_user_data: granted ? 'granted' : 'denied',
+        ad_personalization: granted ? 'granted' : 'denied',
+        ad_storage: granted ? 'granted' : 'denied',
+        analytics_storage: granted ? 'granted' : 'denied'
+      });
+    }
+
+    // Check and handle consent state on page load
+    document.addEventListener("DOMContentLoaded", function() {
+      const cookieConsent = localStorage.getItem("cookieConsent");
+
+      if (cookieConsent === "true") {
+        // User has previously accepted cookies, set consent to 'granted'
+        setGTMConsent(true);
+      } else {
+        // Default consent is 'denied' and show the consent banner
+        setGTMConsent(false);  // Ensure default consent is denied
+        document.getElementById("cookieConsent").style.display = "block";
+      }
+
+      // Handle consent button click
+      document.getElementById("acceptCookies").addEventListener("click", function() {
+        localStorage.setItem("cookieConsent", "true");
+        document.getElementById("cookieConsent").style.display = "none";
+
+        // Update Google Tag Manager consent to 'granted'
+        setGTMConsent(true);
+      });
+    });
   </script>
-
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16609436442"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-16609436442');
-</script>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
