--- a/tours.html
+++ b/tours.html
@@ -1,47 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Load Google Tag Manager -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16609436442"></script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W52KJN6M');</script>
+<!-- End Google Tag Manager -->
   
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-
-    // Function to set Google Tag Manager consent state
-    function setGTMConsent(granted) {
-      gtag('consent', 'update', {
-        ad_user_data: granted ? 'granted' : 'denied',
-        ad_personalization: granted ? 'granted' : 'denied',
-        ad_storage: granted ? 'granted' : 'denied',
-        analytics_storage: granted ? 'granted' : 'denied'
-      });
-    }
-
-    // Check and handle consent state on page load
-    document.addEventListener("DOMContentLoaded", function() {
-      const cookieConsent = localStorage.getItem("cookieConsent");
-
-      if (cookieConsent === "true") {
-        // User has previously accepted cookies, set consent to 'granted'
-        setGTMConsent(true);
-      } else {
-        // Default consent is 'denied' and show the consent banner
-        setGTMConsent(false);  // Ensure default consent is denied
-        document.getElementById("cookieConsent").style.display = "block";
-      }
-
-      // Handle consent button click
-      document.getElementById("acceptCookies").addEventListener("click", function() {
-        localStorage.setItem("cookieConsent", "true");
-        document.getElementById("cookieConsent").style.display = "none";
-
-        // Update Google Tag Manager consent to 'granted'
-        setGTMConsent(true);
-      });
-    });
-  </script>
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.png" type="image/x-icon">
@@ -81,54 +48,18 @@
       border: none;
     }
 
-    /* Cookie Consent Banner Styles */
-    #cookieConsent {
-      display: none;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #000;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-      z-index: 1000;
-    }
-    #cookieConsent p {
-      font-size: 18px;
-      margin: 0;
-    }
-    #cookieConsent a {
-      color: #f1d600;
-      font-weight: bold;
-    }
-    #acceptCookies {
-      background-color: #f1d600;
-      color: #000;
-      border: none;
-      padding: 15px 30px;
-      margin-top: 10px;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-      border-radius: 5px;
-      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
-    }
   </style>
 </head>
   
 <body>
+  
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W52KJN6M"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+  
   <div class="header">
     <img src="roryinoxford.github.io/radcam_header_round.png" alt="Header Image" />
-  </div>
-
-  <!-- Cookie Consent Banner -->
-  <div id="cookieConsent">
-    <p>
-      This website uses cookies to ensure you get the best experience. <a href="/cookie-policy">Learn more</a>
-    </p>
-    <button id="acceptCookies">
-      Got it!
-    </button>
   </div>
 
   <div class="form-container">
