--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W52KJN6M');
+gtag('config', 'AW-16609436442'); </script>
+<!-- End Google Tag Manager -->
     <meta http-equiv="refresh" content="0; url=https://book.roryinoxford.com/tours">
 
     <meta charset="UTF-8">
@@ -35,6 +43,11 @@
     </style>
 </head>
 <body>
+      <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W52KJN6M"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+    
 <p>If you are not redirected automatically, follow this <a href="https://book.roryinoxford.com/tours">link</a>.</p>
 </body>
 </html>
