--- a/policy.html
+++ b/policy.html
@@ -104,7 +104,7 @@ To exercise these rights, please contact us at roryinoxford@gmail.com.<br><br>
 
 We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy periodically for any changes.<br><br>
 
-Legal Basis for Processing<br><br>
+9. Legal Basis for Processing<br><br>
 We process your personal data based on the following legal grounds:<br><br>
 
 Consent: When you provide your consent for us to process your data for specific purposes, such as receiving marketing communications.<br>
@@ -130,7 +130,7 @@ If we transfer your personal data outside the UK or the EEA, we will ensure that
 Changes to This Privacy Policy<br><br>
 We may update this Privacy Policy from time to time to reflect changes in our practices or for other operational, legal, or regulatory reasons. You will be notified of any significant changes through a notice on our website or by email.<br><br>
 
-9. Contact Us<br><br>
+10. Contact Us<br><br>
 
 If you have any questions about this Privacy Policy, please contact us at:<br><br>
 
