--- a/private.html
+++ b/private.html
@@ -25,6 +25,7 @@ gtag('config', 'AW-16609436442'); </script>
         }
         .header {
             width: 100%;
+            max-width: 700px;
             text-align: center;
             margin: 20px 0;
         }
