--- a/private.html
+++ b/private.html
@@ -23,19 +23,19 @@ gtag('config', 'AW-16609436442'); </script>
             background-color: #d4ceb5;
             margin: 0;
         }
-        .header img {
+        .header image {
             width: 100%;
             max-width: 700px;
             text-align: center;
-            margin: 20px 0;
+             height: auto;
         }
         .form-container {
             width: 100%;
             max-width: 640px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 0px rgba(0, 0, 0, 0);
             background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
+            padding: 0px;
+            border-radius: 0px;
         }
         iframe {
             width: 100%;
