--- a/private.html
+++ b/private.html
@@ -23,7 +23,7 @@ gtag('config', 'AW-16609436442'); </script>
             background-color: #d4ceb5;
             margin: 0;
         }
-        .header image {
+        .header-image {
             width: 100%;
             max-width: 700px;
             height: auto;
