--- a/private.html
+++ b/private.html
@@ -27,6 +27,7 @@ gtag('config', 'AW-16609436442'); </script>
             width: 100%;
             max-width: 700px;
             height: auto;
+            align-items: centre;
         }
         .form-container {
             width: 100%;
@@ -38,6 +39,7 @@ gtag('config', 'AW-16609436442'); </script>
         }
         iframe {
             width: 100%;
+            height: 1200px;
             border: none;
         }
     </style>
