--- a/private.html
+++ b/private.html
@@ -27,7 +27,8 @@ gtag('config', 'AW-16609436442'); </script>
             width: 100%;
             max-width: 700px;
             height: auto;
-            align-items: centre;
+            align-items: center;
+            justify-content: center;
         }
         .form-container {
             width: 100%;
