--- a/private.html
+++ b/private.html
@@ -23,12 +23,11 @@ gtag('config', 'AW-16609436442'); </script>
             background-color: #d4ceb5;
             margin: 0;
         }
-        .header image {
+        .header {
             width: 100%;
             max-width: 700px;
             height: auto;
-            align-items: center;
-            justify-content: center;
+            text-align: center
         }
         .form-container {
             width: 100%;
