--- a/private.html
+++ b/private.html
@@ -23,11 +23,19 @@ gtag('config', 'AW-16609436442'); </script>
             background-color: #d4ceb5;
             margin: 0;
         }
-        .header {
-            width: 100%;
-            max-width: 700px;
-            height: auto;
-            text-align: center
+        
+            .header-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.header-image {
+    width: 100%;
+    max-width: 700px;
+    height: auto;
+    margin-bottom: 10px;
         }
         .form-container {
             width: 100%;
