--- a/private.html
+++ b/private.html
@@ -24,19 +24,17 @@ gtag('config', 'AW-16609436442'); </script>
             margin: 0;
         }
         
-            .header-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-.header-image {
-    width: 100%;
-    max-width: 700px;
-    height: auto;
-    margin-bottom: 10px;
-        }
+    .header {
+      width: 100%;
+      text-align: center;
+      margin: 20px 0;
+    }
+    .header img {
+      width: 100%;
+      max-width: 700px;
+      height: auto; /* Ensure image scales proportionally */
+    }
+        
         .form-container {
             width: 100%;
             max-width: 640px;
