--- a/private.html
+++ b/private.html
@@ -39,13 +39,13 @@ gtag('config', 'AW-16609436442'); </script>
             width: 100%;
             max-width: 640px;
             box-shadow: 0 0 0px rgba(0, 0, 0, 0);
-            background-color: #fff;
+            background-color: #d4ceb5;
             padding: 0px;
             border-radius: 0px;
         }
         iframe {
             width: 100%;
-            height: 3000px;
+            height: 2800px;
             border: none;
         }
     </style>
