--- a/policy.html
+++ b/policy.html
@@ -43,13 +43,13 @@
 <div class="container">
     <h1>Privacy Policy</h1>
 
-    <p>Effective date: 21st August 2024</p>
+    <p>Effective date: 21ss August 2024</p>
 
 Privacy Policy<br><br>
 
-Last Updated: 21st August 2024<br><br>
+Last Updated: 12th September 2024<br><br>
 
-Rory in Oxford ("we", "us", "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, https://roryinoxford.com (the "Site"). Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the Site.<br><br>
+Rory in Oxford ("we", "us", "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website, https://roryinoxford.com (the "Site"). Https://book.roryinoxford.com is included within https://roryinoxford.com, and so all talk of the "Site" also refers to https://book.roryinoxford.com. Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the Site.<br><br>
 
 1. Information We Collect<br><br>
 
@@ -60,22 +60,27 @@ Email address<br>
 Phone number<br>
 Any other information provided to us in a submittable form<br><br>
 
+Submitting information through a submittable form is taken as consent to collect such information.<br><br>
+
 2. How We Use Your Information<br><br>
 
 We use the information we collect from you in the following ways:<br><br>
 
 To process and fulfill your orders.<br>
+To help you find the meeting point for a tour, if booked.<br>
 To send you administrative information such as order confirmations, invoices, or updates on your order status.<br>
+To contact you for marketing purposes, including sending requests for reviews.<br>
 To improve our website, products, and services.<br>
 To facilitate targeted advertising through Google Ads.<br>
-To process payments via PayPal.<br><br>
+To process payments via PayPal.<br>
+To process payments via Payable Forms (https://www.payableapps.com/) <br><br>
 
 3. Disclosure of Your Information<br><br>
 
 We may share your information in the following situations:<br><br>
 
-With Service Providers: We may share your information with third-party service providers who perform services on our behalf, such as payment processing (e.g., PayPal) or marketing services (e.g., Google Ads).<br>
-With contractors: Your information may need to be shared with a contracting tour guide, if Rory Kunz (the owner) is not able to provide your tour. This information would only be used in order to fulfil your order.<br>
+With Service Providers: We may share your information with third-party service providers who perform services on our behalf, such as payment processing (e.g., PayPal; Payable Forms) or marketing services (e.g., Google Ads).<br>
+With contractors: Your information may need to be shared with a contracting tour guide, if Rory Kunz is not able to provide your tour. This information would only be used in order to fulfil your order.<br>
 By Law or to Protect Rights: We may disclose your information if we believe it is necessary to comply with applicable law, regulation, or legal process, or to protect the rights, property, and safety of Rory in Oxford, our users, or others.<br><br>
 
 4. Cookies and Tracking Technologies<br><br>
@@ -92,11 +97,14 @@ We use administrative, technical, and physical security measures to help protect
 
 7. Your Rights<br><br>
 
-You have the right to:<br><br>
+You have the following rights:<br><br>
 
-Access and receive a copy of the information we hold about you.<br>
-Correct any inaccurate or incomplete information.<br>
-Request the deletion of your information under certain circumstances.<br><br>
+Right to Access: You can request access to the personal data we hold about you.<br>
+Right to Rectification: You can request that we correct any inaccurate or incomplete information.<br>
+Right to Erasure: You can request that we delete your personal data, subject to certain conditions.<br>
+Right to Restrict Processing: You can request that we restrict the processing of your personal data under certain circumstances.<br>
+Right to Data Portability: You can request to receive your personal data in a structured, commonly used, and machine-readable format and to have it transferred to another data controller.<br>
+Right to Object: You can object to the processing of your personal data where we rely on legitimate interests as the legal basis.<br><br>
 
 To exercise these rights, please contact us at roryinoxford@gmail.com.<br><br>
 
@@ -110,16 +118,6 @@ We process your personal data based on the following legal grounds:<br><br>
 Consent: When you provide your consent for us to process your data for specific purposes, such as receiving marketing communications.<br>
 Contract: Processing is necessary for the performance of a contract to which you are a party, such as processing your orders.<br>
 Legitimate Interests: We may process your data based on our legitimate interests, such as improving our services and conducting targeted advertising, provided these interests are not overridden by your rights.<br><br>
-
-Your Data Protection Rights<br><br>
-Under the UK GDPR, you have the following rights:<br><br>
-
-Right to Access: You can request access to the personal data we hold about you.<br>
-Right to Rectification: You can request that we correct any inaccurate or incomplete information.<br>
-Right to Erasure: You can request that we delete your personal data, subject to certain conditions.<br>
-Right to Restrict Processing: You can request that we restrict the processing of your personal data under certain circumstances.<br>
-Right to Data Portability: You can request to receive your personal data in a structured, commonly used, and machine-readable format and to have it transferred to another data controller.<br>
-Right to Object: You can object to the processing of your personal data where we rely on legitimate interests as the legal basis.<br><br>
 
 Cookies and Tracking Technologies<br><br>
 We use cookies and similar technologies to enhance your browsing experience, serve personalized content, and analyze our traffic. By using our Site, you consent to the use of cookies in accordance with our Cookie Policy. You can manage your cookie preferences through your browser settings or by using the cookie management tool on our Site.<br><br>
