--- a/tours.html
+++ b/tours.html
@@ -60,7 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   
   <div class="header">
-    <img src="roryinoxford.github.io/radcam_header_round.png" alt="Header Image" />
+    <img src="radcam_header_round.png" alt="Header Image" />
   </div>
 
   <div class="form-container">
