--- a/private.html
+++ b/private.html
@@ -57,7 +57,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   
     <div class="header">
-        <img src="ds_header_round.png" alt="Header Image"/>
+        <img src="/ds_header_round.png" alt="Header Image"/>
     </div>
     <div class="form-container">
        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScRxTOu7JqM7FeIsk11Xk6_oGVBPfukdbX5rFK2ZgTx6-3vig/viewform?embedded=true"</iframe>
